# MCPServers

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
base/: Dockerfile  entrypoint.sh  pyproject.toml
kagi/: Dockerfile  pyproject.toml
plex/: Dockerfile  Dockerfile.service  entrypoint.service.sh  pyproject.toml
src/base/: __init__.py
src/kagi/: server.py
src/plex/: api.py  common.py  format.py  knowledge copy.py  knowledge.py  plex_api.py  search.py  server.py  service.py  types.py  utils.py
src/plex/knowledge/: __init__.py  collection.py  types.py  utils.py
src/plex/tools/: search.py
src/plex/utils/: mixins.py
src/plex/vector_db/: models.py  qdrant.py
