[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-servers"
version = "0.1.0"
requires-python = ">=3.11,<4"
description = "Reusable FastMCP base server with shared CLI and setup logic"
authors = [
    { name = "Teagan Glenn", email = "that@teagantotally.rocks" }
]

# This allows you to do `pip install -e .` with editable install
[project.optional-dependencies]
dev = [
    "uv",  # or pip if you're boring
    "black",
    "isort",
    "mypy",
    "pytest",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["base"]

[tool.setuptools]
package-dir = { "" = "src" }


[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
