[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-base"
version = "0.1.1"
requires-python = ">=3.11,<4"
description = "Utility modules used across MCP packages"
dependencies = [
    "fastmcp>=2.10.5",
    "pydantic>=2.11.7",
]

[tool.setuptools]
package-dir = { "" = "../src" }

[tool.setuptools.packages.find]
where = ["../src"]
include = ["base"]
