[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-plex"
version = "0.12.18"

description = "Plex-specific automation"
requires-python = ">=3.11,<4"
dependencies = [
  "mcp_base @ file://${PROJECT_ROOT}/base",
  "plexapi>=4.17.0",
  "qdrant-client[fastembed-gpu]>=1.15.1",
  "rapidfuzz>=3.13.0",
  "scikit-learn>=1.7.1",
]

[project.scripts]
mcp-plex = "plex.server:main"

[tool.setuptools]
package-dir = { "" = "../src" }

[tool.setuptools.packages.find]
where = ["../src"]
include = ["plex"]
