[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-plex"
version = "0.17.10"

description = "Plex-specific automation"
requires-python = ">=3.11,<4"
dependencies = [
  "mcp-base",
  "plexapi>=4.17.0",
  "qdrant-client[fastembed-gpu]>=1.12.1",
  "rapidfuzz>=3.13.0",
  "scikit-learn>=1.7.1",
]

[project.scripts]
mcp-plex = "plex.server:main"
load-data = "plex.service:main"

[[tool.uv.index]]
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"

[tool.uv.sources]
mcp-base = { path = "../base" }

[tool.setuptools]
package-dir = { "" = "../src" }

[tool.setuptools.packages.find]
where = ["../src"]
include = ["plex"]
